...
}

enum GroupAction {
  archive('Archive', 'archive'),
  delete('Delete', 'trash'),
  move('Move', 'move'),
  read('Mark read', 'mail-open'),
  unread('Mark unread', 'mail'),
  flag('Flag', 'flag'),
  unflag('Unflag', 'flag');

  const GroupAction(this.label, this.icon);
  final String label, icon;

...
